Bug 827272 - Avoid performing cleanup on SSL state that doesn't exist. r=bsmith